fixed main page

--- a/ArcsSystem/static/css/base-style.css
+++ b/ArcsSystem/static/css/base-style.css
@@ -15,6 +15,8 @@
 h1 {
   font-family: 'Playfair Display';
   color: #000000;
+  font-size: 26px;
+  font-weight:bold;
 
 }
 
@@ -31,6 +33,7 @@ h3 {
 p {
   font-family: Lato;
   font-style: normal;
+  font-size: 14px !important;
   color: #000000;
 }
 
@@ -38,11 +41,12 @@ p.italic {
   font-family: Lato;
   font-style: italic;
   color: #000000;
+
 }
 
 p.bold {
   font-family: Lato;
-  font-style: bold;
+  font-weight: bold;
   color: #000000;
 }
 
@@ -60,21 +64,18 @@ body {
 
 .header-main-menu {
   background-color: #255C61;
-  padding-left: 60px !important;
-  padding-right: 60px !important;
+  padding-left: 80px !important;
+  padding-right: 80px !important;
   padding-top: 15px !important;
   padding-bottom: 15px !important;
 }
 
-.main-menu-buttons-font {
-  font-family: Lato;
-  font-style: bold;
-  color: #FFFFFF;
+.language-flag{
+    max-width: 25px;
+    max-height: 25px;
+    margin-right: 10px;
 }
 
-.change-language-item:hover{
-    background-color: #C3D3D0 ;
-}
 
 .language-selected-color{
     background-color: #174255;
@@ -82,7 +83,20 @@ body {
     color: #FFFFFF;
 }
 
-.header-main-menu-body{
+.language-selected-color svg path{
+    fill: #fff;
+}
+
+.language-selected-color:hover{
+    background-color: #174255 !important;
+    color: #fff;
+}
+
+.flag-svg-align{
+    margin-right: 10px;
+}
+
+.light-grayish-cyan-background-color, .change-language-item:hover{
     background-color: #C3D3D0 ;
 }
 
@@ -90,12 +104,19 @@ body {
     color:  #FFFFFF;
 }
 
-
 .main-menu-buttons {
-  font-family: Lato;
-  font-style: bold;
+  font-family: Helvetica;
+  font-weight: bold;
   color: #FFFFFF;
 }
+
+.main-menu-buttons-font {
+  font-family: Helvetica;
+  font-weight: bold;
+  color: #FFFFFF;
+  margin-right: 30px;
+}
+
 
 .header-main-menu .dropdown-divider {
     border-color: #000000;
@@ -116,6 +137,10 @@ body {
 
 .header-main-menu .dropdown-menu ul li{
     margin-left: 40px;
+}
+
+#form-search-nev{
+    float: right;
 }
 
 .has-search .form-control {
@@ -139,6 +164,12 @@ body {
     padding: 10px;
 }
 
+.home-page-buttons{
+    font-family: Helvetica;
+    color: #000;
+    font-size: 11px;
+}
+
 .container-footer {
    border-top: 1px solid;
 }
@@ -146,6 +177,8 @@ body {
 .container-footer-menu {
   margin-top: 15px;
   margin-bottom: 15px;
+  margin-left: 80px;
+  margin-right: 80px;
 }
 
 .main-footer-participiate {
@@ -162,7 +195,7 @@ body {
 
 .footer-menu-font>li>a{
   font-family: Lato;
-  font-style: bold !important;
+  font-weight: 500;
   color: #255C61;
 }
 
@@ -192,27 +225,20 @@ body {
     font-size: 25px;
 }
 
-.text-style{
-    font-family: Playfair;
-    font-size: 15px;
-}
-
 .greenish-brown-color{
     background-color: #9FB0A0;
 }
 
-.greenish-brown-color-bottom-sytyle{
-    background-color: #9FB0A0;
-    font-family: Lato;
-    font-weight: bold;
-    font-size: 12px;
+.light-green-color{
+    background-color: #255C61;
+}
+
+.white-font-color{
+    color: #fff;
 }
 
 .green-brown-color-bottom-sytyle{
     background-color: #255C61;
-    font-family: Lato;
-    font-weight: bold;
-    font-size: 12px;
     color: #FFFFFF;
 }
 
@@ -365,7 +391,6 @@ font-family: Helvetica;
     font-family: Helvetica;
 }
 
-.
 
 .detail-view{
   margin-left: 50px;
@@ -384,4 +409,14 @@ h2.detail-view{
 h3.detail-view{
   margin-top: 25px;
   margin-bottom: 25px;
+}
+
+.hide-extend-language-icon::after{
+        display: none;
+}
+
+.header-menu-btn-font{
+    color:#255C61;
+    font-family: Lato;
+    font-weight: bolder;
 }
