--- a/ArcsSystem/templates/nav_main.html
+++ b/ArcsSystem/templates/nav_main.html
@@ -1,7 +1,7 @@
 {% load static %}{% load i18n %}
 
 {% block main_menu %}
-<nav role="navigation" id="main-nav" aria-label="Main navigation">
+<!-- <nav role="navigation" id="main-nav" aria-label="Main navigation">
   <ul>
     {% for item in menu_items %}
     <li class="{{ item.active_class }}">
@@ -12,5 +12,135 @@
     </li>
     {% endfor %}
   </ul>
-</nav>
+</nav> -->
+
+<div class="collapse navbar-collapse body" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{% trans "Getting Started With Citizen Science" %}</a>
+            <div class="dropdown-menu main-menu-buttons light-grayish-cyan-background-color" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item font-weight-bold" href="#">{% trans "What is Citizen Science?" %}</a>
+                  <div class="dropdown-divider"></div>
+                      <ul>
+                          <li class="nav-item dropdown">
+                              <a class="dropdown-item" href="#">{% trans "Swedish Citizen Science" %}</a>
+                          </li>
+                      </ul>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item font-weight-bold" href="#">{% trans "Case Studies" %}</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item font-weight-bold" href="#">{%trans "FAQ" %}</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item font-weight-bold" href="#">{%trans "Additional Resources" %}</a>
+                  <div class="dropdown-divider"></div>
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">  {% trans "Citizen Science in Practice" %} </a>
+            <div class="dropdown-menu main-menu-buttons light-grayish-cyan-background-color" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item font-weight-bold" href="#">{%trans "Data Standards and Quality" %}</a>
+                    <div class="dropdown-divider"></div>
+                    <ul>
+                        <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Methods" %}</a>
+                        </li>
+                        <div class="dropdown-divider"></div>
+                        <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Visual of Papers and Themes" %}</a>
+                        </li>
+                    </ul>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item font-weight-bold" href="#">{%trans "Technology" %}</a>
+                    <div class="dropdown-divider"></div>
+                    <ul>
+                        <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Methods" %}</a>
+                        </li>
+                        <div class="dropdown-divider"></div>
+                        <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Visual of Papers and Themes" %}</a>
+                        </li>
+                    </ul>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item font-weight-bold" href="#">{%trans "Ethics" %}</a>
+                    <div class="dropdown-divider"></div>
+                    <ul>
+                        <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Methods" %}</a>
+                        </li>
+                        <div class="dropdown-divider"></div>
+                        <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Visual of Papers and Themes" %}</a>
+                        </li>
+                    </ul>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item font-weight-bold" href="#">{%trans "Communications" %}</a>
+                    <div class="dropdown-divider"></div>
+                    <ul>
+                        <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Methods" %}</a>
+                        </li>
+                        <div class="dropdown-divider"></div>
+                        <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Visual of Papers and Themes" %}</a>
+                        </li>
+                    </ul>
+                    <div class="dropdown-divider"></div>
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> {% trans "Citizen Science in Sweden" %} </a>
+            <div class="dropdown-menu main-menu-buttons light-grayish-cyan-background-color" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item font-weight-bold" href="#">{%trans "Citizen Science Projects" %}</a>
+                <div class="dropdown-divider"></div>
+                <ul>
+                    <li nav-item dropdown>
+                        <a class="dropdown-item" href="#">{%trans "Map of Projects" %}</a>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <li nav-item dropdown>
+                            <a class="dropdown-item" href="#">{%trans "Add your Projects" %}</a>
+                    </li>
+                </ul>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item font-weight-bold" href="#">{%trans "Predifined List of Projects" %}</a>
+                <div class="dropdown-divider"></div>
+                <ul>
+                    <li nav-item dropdown>
+                        <a class="dropdown-item" href="#">{%trans "Funders" %}</a>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <li nav-item dropdown>
+                        <a class="dropdown-item" href="#">{%trans "Associated Affiliates" %}</a>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <li nav-item dropdown>
+                        <a class="dropdown-item" href="#">{%trans "Reserchers" %}</a>
+                    </li>
+                </ul>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item font-weight-bold" href="#">{%trans "Proudacts" %}</a>
+                <div class="dropdown-divider"></div>
+                <ul>
+                    <li nav-item dropdown>
+                        <a class="dropdown-item" href="#">{%trans "Papers" %}</a>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <li nav-item dropdown>
+                        <a class="dropdown-item" href="#">{%trans "Policy" %}</a>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <li nav-item dropdown>
+                        <a class="dropdown-item" href="#">{%trans "Data" %}</a>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <li nav-item dropdown>
+                        <a class="dropdown-item" href="#">{%trans "Broader Impacts" %}</a>
+                    </li>
+                </ul>
+                <div class="dropdown-divider"></div>
+            </div>
+        </li>
+    </ul>
+</div>
 {% endblock main_menu %}
