unfinished and stuck

--- a/ArcsSystem/templates/publications/article_publications_list.html
+++ b/ArcsSystem/templates/publications/article_publications_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 {% load workpackages_extras %}
-
+{% load workpackages_extras %}
 
 {% block content %}
 
@@ -23,33 +23,5 @@
 {% endfor %}
 </div>
 
-
-{% if LANGUAGE_CODE == "en" %}
-   <h3>{{ "Ethics"|get_wp_name }}</h3>
-{% endif %}
-
-{% if LANGUAGE_CODE == "sv" %}
-    <h3>{{ "Etik"|get_wp_name }}</h3>
-{% endif %}
-
-
-{% if LANGUAGE_CODE == "en" %}
-    <p>{{ "Ethics"|get_wp_intro }}</p>
-{% endif %}
-
-{% if LANGUAGE_CODE == "sv" %}
-    <p>{{ "Etik"|get_wp_intro }}</p>
-{% endif %}
-
-
-<p>
-{{ "Ethics"|get_wp_detailed_content }}
-</p>
-
-
-{% for theme in "Ethics"|get_wp_themes %}
-<p><b>{{ theme.title}}</b></p>
-<p>{{ theme.body }}</p>
-{% endfor %}
 
 {% endblock content %}
