--- a/ArcsSystem/templates/workpackages/theme_view.html
+++ b/ArcsSystem/templates/workpackages/theme_view.html
@@ -8,8 +8,8 @@
 <h1>{% trans "Arcs Resources" %}</h1>
 
 <ul>
-{% for page in object_list %}
-<li><a href="{{ page.get_absolute_url }}">{{ page.title }}</a></li>
+{% for theme in object_list %}
+<li><a href="{{  }}">{{ theme.title }}</a></li>
 
 
 {% endfor %}
