--- a/ArcsSystem/templates/workpackages/category_view.html
+++ b/ArcsSystem/templates/workpackages/category_view.html
@@ -1,17 +1,18 @@
+
 {% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
-{% load staticpages_tree %}
 {% load workpackages_extras %}
-
 
 {% block content %}
 
 <h1>{% trans "Arcs Resources" %}</h1>
 
+
+
 <ul>
-{% for page in object_list %}
-<li>{{ page}}</li>
+{% for theme in object_list %}
+<li><a href="{{ theme.title }}">{{ theme.wp_parent }}: {{ theme.title }}</a></li>
 
 
 {% endfor %}
@@ -27,7 +28,9 @@
     <h3>{{ "Etik"|get_wp_name }}</h3>
 {% endif %}
 
-
-
+{% for theme in "Ethics"|get_wp_themes %}
+<p><b>{{ theme.title}}</b></p>
+<p>{{ theme.body }}</p>
+{% endfor %}
 
 {% endblock content %}
