Fixed main page slider

--- a/ArcsSystem/static/css/base-style.css
+++ b/ArcsSystem/static/css/base-style.css
@@ -10,14 +10,11 @@
   font-display: swap;
 }
 
-
-
 h1 {
   font-family: 'Playfair Display';
   color: #000000;
   font-size: 26px;
   font-weight:bold;
-
 }
 
 h2 {
@@ -75,7 +72,6 @@ body {
     max-height: 25px;
     margin-right: 10px;
 }
-
 
 .language-selected-color{
     background-color: #174255;
@@ -237,10 +233,21 @@ body {
     color: #fff;
 }
 
+.black-color{
+    color: #000 !important;
+}
+
 .green-brown-color-bottom-sytyle{
     background-color: #255C61;
     color: #FFFFFF;
 }
+
+#main-page-slider{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #c3d3d0;
+}
+
 
 .light-green-style{
     background-color: #d2e1df;
@@ -250,6 +257,57 @@ body {
     margin-right: 30px;
     padding: 10px;
 }
+
+.carousel-multi-item-selector{
+    padding: 0px;
+    border: 1px solid;
+    border-color: #9FB0A0;
+    border-radius: 4px 4px 4px 4px;
+}
+
+.border-slider-content{
+    border: 0 !important;
+}
+
+.content-slider{
+    padding-top: 20px;
+    background-color: #c3d3d0;
+}
+
+.slider-top-controler{
+    float: right;
+    background-color: #c3d3d0;
+}
+
+.next-icon-slider{
+    width: 20px;
+    height: 20px;
+}
+
+#icon-preview-rotate{
+    transform: rotate(180deg);
+}
+
+.icon-flipped {
+    color: #000;
+    height: 10px;
+    width: 10px;
+}
+
+.slider-header{
+    padding: 10px;
+}
+
+.slider-selector{
+    color: #c3d3d0 !important;
+    background-color: #000 !important;
+}
+
+.carousel-indicators li {
+    height: 10px;
+    width: 10px;
+    border-radius: 50% !important;
+  }
 
 .visual-Mindmap-style{
     margin-top: 30px;
