--- a/ArcsSystem/templates/staticpages/static_variant1.html
+++ b/ArcsSystem/templates/staticpages/static_variant1.html
@@ -26,7 +26,7 @@
         	</div>
             <div class="row text-justify text-style">
                 <div class="col">
-                    <h2 font-weight-bold text-header-style > {{ object.title }}</h2>
+                    <h1> {{ object.title }}</h1>
                     <p > Publication Date: {{object.published}}</p>
                     <img class="img-fluid" src="{% static "devplaceholder/knowledge-1052014_1920.jpg" %}" alt="{% trans '' %}"/>
                     <br>
