Fixed blog page

--- a/ArcsSystem/templates/staticpages/static_variant2.html
+++ b/ArcsSystem/templates/staticpages/static_variant2.html
@@ -18,7 +18,7 @@
             <div class="row" style="border-bottom: 1px solid;">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'blog:blog_list_view' %}"> Home </a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'staticpages:homepage_view' %}"> Home </a></li>
                     <li class="breadcrumb-item"><a href="{% url 'staticpages:staticpage_list' %}">Resources</a></li>
                     <li class="breadcrumb-item active" aria-current="page"> {{object.title}} </li>
                   </ol>
