--- a/ArcsSystem/templates/blog/blog_detail.html
+++ b/ArcsSystem/templates/blog/blog_detail.html
@@ -6,11 +6,95 @@
 
 {# this tag will insert a comment in the HMTL, but won't be rendered #}
 
+{% load publications_extras %}
 
-<h1>{{ object.title }}</h1>
+{% autoescape off %} <!-- This makes Summernote possible -->
 
-<p>{{ object.content|safe }}</p>
+<div class="container">
+    <div class="row">
+        <div class="col-9">
+            <div class="row" style="border-bottom: 1px solid;">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'staticpages:homepage_view' %}"> Home </a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'blog:blog_list_view' %}">Blogs</a></li>
+                    <li class="breadcrumb-item active" aria-current="page"> {{object.title}} </li>
+                  </ol>
+                </nav>
+        	</div>
+            <div class="row text-justify" style="padding-top: 10px;">
+                <div class="col">
+                    <h1>{{ object.title }}</h1>
+                    <img class="img-fluid" src="{% static "devplaceholder/library-863148_1920.jpg" %}" alt="{% trans '' %}"/>
+                    <p>{{ object.content|safe }}</p>
+                    <br>
+                    <p> {{ object.content }} </p>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="accordion ">
+                      <div class="accordion__item">
+                        <div class="accordion__item__header" >
+                         <p class="home-page-buttons bold"> THEME 1</p>
+                        </div>
+
+                        <div class="accordion__item__content">
+                            <p> Explain of your item goes here...</p>
+                		</div>
+                        </div>
+                	        <div class="accordion__item">
+                        <div class="accordion__item__header">
+                            <p class="home-page-buttons bold"> THEME 2</p>
+                        </div>
+
+                        <div class="accordion__item__content">
+                            <p> Explain of your item goes here...</p>
+                		</div>
+                      </div>
+                	        <div class="accordion__item">
+                        <div class="accordion__item__header">
+                            <p class="home-page-buttons bold"> THEME 3</p>
+                        </div>
+
+                        <div class="accordion__item__content">
+                          <p> Explain of your item goes here...</p>
+                		 </div>
+                      </div>
+                    </div> <!-- id accordion end -->
+                </div>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="row visual-Mindmap-style">
+                <div class="col">
+                    <h1 > Visual - linked </h1>
+                    <img class="img-fluid" src="{% static "devplaceholder/open-book-1428428_1920.jpg" %}" alt="{% trans '' %}"/>
+                </div>
+            </div>
+            <div class="row visual-Mindmap-style">
+                <div class="col">
+                    <h1> {% trans "Related Content" %}</h1>
+
+                    {% for q in "ethics"|query_publications %}
+                    <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{q}}</a></p>
+                    {% endfor %}
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
+{% endautoescape %}
 {% endblock content %}
+
+{% block extra_head %}
+<script src="{% static 'scripts/accordion.js' %}" type="text/javascript"></script>
+    <!-- Accordion CSS -->
+<link rel="stylesheet" href="{% static 'css/accordion_style.css' %}">
+
+{% endblock extra_head %}
