Fixed home page errors, fixed login button

--- a/ArcsSystem/templates/home.html
+++ b/ArcsSystem/templates/home.html
@@ -43,7 +43,7 @@
                             <div class="col">
                                 <!--Controls-->
                                 <div class="controls-top slider-top-controler">
-                                  <a class="btn-floating" href="#multi-item-example" data-slide="next"><img id="icon-preview-rotate" class="next-icon-slider" src="{% static 'icons/Arrow_Right_Drop_Circle_Outline_Icon_3.png'%}" alt="next-icon"/></a>
+                                  <a class="btn-floating" href="#multi-item-example" data-slide="prev"><img id="icon-preview-rotate" class="next-icon-slider" src="{% static 'icons/Arrow_Right_Drop_Circle_Outline_Icon_3.png'%}" alt="next-icon"/></a>
                                   <a class="btn-floating" href="#multi-item-example" data-slide="next"><img class="next-icon-slider" src="{% static 'icons/Arrow_Right_Drop_Circle_Outline_Icon_3.png'%}" alt="next-icon"/></a>
                                 </div>
                                 <!--/.Controls-->
