--- a/ArcsSystem/static/css/base-style.css
+++ b/ArcsSystem/static/css/base-style.css
@@ -47,8 +47,12 @@ p.bold {
   color: #000000;
 }
 
-body {
+body, .header-main-menu-body {
   background-color: #C3D3D0 !important;
+}
+
+#content{
+    margin-top: 30px;
 }
 
 #header-main-logo {
@@ -213,6 +217,10 @@ body {
     padding-top: 8px;
     padding-bottom: 8px;
     border-top: 1px solid;
+}
+
+#cc-by{
+    height: 30px;
 }
 
 .text-header-style {
@@ -488,4 +496,13 @@ h3.detail-view{
     color:#255C61;
     font-family: Lato;
     font-weight: bolder;
+    white-space: nowrap;
+}
+
+.header-menu-btn-font:hover{
+    color:#255C61;
+    font-family: Lato;
+    font-weight: bolder;
+    text-decoration: none;
+    white-space: nowrap;
 }
