--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -101,9 +101,20 @@
 						</div>
 						<div class="col">
 							<button class="btn header-menu-btn-font">
-								<img class="header-icons" src="{% static 'icons/Account_Circle_Icon_5.png' %}" alt="{% trans 'Profile icon for login and account details' %}"/>
-								<br>
-								Login
+								{% if user.is_authenticated %}
+								  	<a class="header-menu-btn-font" href="{% url 'account_logout' %}">
+										<img class="header-icons" src="{% static 'icons/Account_Circle_Icon_5.png' %}" alt="{% trans 'Profile icon for login and account details' %}"/>
+								  		<br>
+										{{ user.username }}
+									</a>
+								{% else %}
+								  	<a class="header-menu-btn-font" href="{% url 'account_login' %}">
+										<img class="header-icons" src="{% static 'icons/Account_Circle_Icon_5.png' %}" alt="{% trans 'Profile icon for login and account details' %}"/>
+		  								<br>
+		  								{% trans "Login" %}
+									</a>
+								{% endif %}
+
 							</button>
 						</div>
 					</div>
@@ -140,16 +151,6 @@
 			</ul>
 		</div>
 		{% endif %}
-
-		<div>
-			{% if user.is_authenticated %}
-			  {% trans "Hi" %} {{ user.username }}!
-			  <p><a href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a></p>
-			{% else %}
-			  <a href="{% url 'account_login' %}">{% trans "Sign In" %}</a> |
-			  <a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
-			{% endif %}
-		</div>
 
 		<main id="content">{# Contents of Main are for the main target of the page. #}
 	  	{% block content %}
@@ -250,7 +251,7 @@
 				</div>
 				<div class="row cc-by-footer d-flex justify-content-center align-items-center">
 					<div class="col-auto">
-						<img id="cc-by" src="{% static 'icons/CC-BY_icon.svg' %}" alt="{% trans '' %}"/>
+						<img id="cc-by" src="{% static 'icons/CC-BY_icon.png' %}" alt="{% trans '' %}"/>
 					</div>
 					<div class="col-auto policy-footer-font d-flex justify-content-center align-items-center">
 						<p class="mb-0">Except where otherwise <a href="#"> noted, </a> content on this site is licensed under a <a href="https://creativecommons.org/licenses/by/4.0/deed.{{ LANGUAGE_CODE }}"> Creative Commons Attribution 4.0 International License.</a></p>
