Fixed linkedin social media hardlink and aded instagram link.

--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -42,7 +42,7 @@
 							</a>
 						</div>
 						<div class="col">
-							<a href="#">
+							<a href="https://www.instagram.com/citscise/">
 								<img class="header-icons" src="{% static 'icons/Instagram_Brands_Icon_4.png'%}" alt="{% trans 'Instagram icon in the header linking to Medborgarforskning.se on Instagram' %}"/>
 							</a>
 						</div>
@@ -183,13 +183,13 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right ml-auto">
 						<li class="nav-item font-weight-bold d-flex justify-content-center align-items-center">{% trans "Follow medborgarforskning.se" %}: </li>
-						<li class="nav-item"><a href="https://www.linkedin.com/company/arcs-citsci/" class="nav-link">
+						<li class="nav-item"><a href="#" class="nav-link">
 							<img class="header-icons" src="{% static 'icons/Facebook_Brands_Icon_4.png' %}" alt="{% trans 'Facebook icon in the footer linking to Medborgarforskning.se on Facebook' %}"/>
 						</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">
+						<li class="nav-item"><a href="https://www.linkedin.com/company/arcs-citsci/" class="nav-link">
 							<img class="header-icons" src="{% static 'icons/Linkedin_Brands_Icon_4.png' %}" alt="{% trans 'LinkedIn icon in the footer linking to Medborgarforskning.se on LinkedIn' %}"/>
 						</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">
+						<li class="nav-item"><a href="https://www.instagram.com/citscise/" class="nav-link">
 							<img class="header-icons" src="{% static 'icons/Instagram_Brands_Icon_4.png' %}" alt="{% trans 'Instagram icon in the footer linking to Medborgarforskning.se on Instagram' %}"/>
 						</a></li>
 						<li class="nav-item"><a href="https://twitter.com/CitSciSE" class="nav-link">
